# notion-client

./: .gitignore  CACHE_FLOWCHART.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TESTING_GUIDE.md  examples.ipynb  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/notion_client/: __init__.py  client.py  config.py  exceptions.py  helpers.py  properties.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_exceptions.py  test_helpers.py  test_properties.py
